(Sec 6) complete redesign and rewrite of algorithms
+ still need to fill in proofs, but apart from likely typos,
  I'm convince the methods/algorithms are correct and efficient

--- a/DiffTerm/inputs/wjdlatexmacs.sty
+++ b/DiffTerm/inputs/wjdlatexmacs.sty
@@ -260,6 +260,7 @@
 \acrodef{ld}[LD]{local difference}
 \acrodef{ldt}[LDT]{local difference term}
 \newcommand{\ld}{\acs{ld}\xspace}
+\newcommand{\ldt}{\acs{ldt}\xspace}
 \newcommand{\ldto}{\acs{ldt} operation\xspace}
 \newcommand{\ldtos}{\acs{ldt} operations\xspace}
 \acrodef{ild}[ILD]{inductive local difference}
