--- a/DiffTerm/diffTerm.tex
+++ b/DiffTerm/diffTerm.tex
@@ -2314,113 +2314,135 @@ $O(r^2m^2n^3 + n^5)$.
 
 
 
-\subsection{Two inductive stages}
+\subsection{Inductive stages}
 The method is based on the proof of Theorem~\ref{thm:local-diff-terms} and consists of two 
 stages, each of which makes $n^2$ calls to Algorithm~\ref{alg:ld-2}.
 
-Define $\ell := 2n^2-1$ and let
+Define $\ell := 2n^2-1$ and 
+enumerate the set $A^2 \times \{0,1\}$ as follows:
 \[
   \{(a_0, b_0, 0), (a_0, b_0, 1), (a_1, b_1, 0),(a_1, b_1, 1), \dots,
-  (a_{\ell-1}, b_{\ell-1},0), (a_{\ell}, b_{\ell},1)\},
+  (a_{\ell-1}, b_{\ell-1},0), (a_{\ell}, b_{\ell},1)\}.
 \]
-be an enumeration of the entire set $A^2 \times \{0,1\}$.
-The first inductive stage of our procedure computes the Cayley table of a \ldto for 
-the set $S_\ell := \{(a_0, b_0, 1), (a_1, b_1, 1), \dots,
-(a_{\ell-1}, b_{\ell-1},1), (a_{\ell}, b_{\ell},0)\}$.
-Call the resulting \ldto $p$.  The second stage computes the Cayley table of a \ldto for
-\[T_\ell := \{(a_0, b_0, 0), \dots,
-(a_{\ell-1}, b_{\ell-1},0), (a_{\ell}, b_{\ell},0), (p(a_{\ell}, a_{\ell}, b_{\ell}), b_\ell, 1)\}.
+Define $Z_0 := \{(a_0, b_0,0)\}$, $U_0 := \{(a_0, b_0,1)\}$, and for $k>0$,
+\[
+  Z_k := Z_{k-1} \cup \{(a_k, b_k,0)\}, \quad 
+  U_k := U_{k-1} \cup \{(a_k, b_k,1)\}.
 \]
-Call this \ldto $q$. Finally, we construct the Cayley table of the operation
-$d(x,y,z) := q(p(x,y,z), p(y,y,z), z)$.
-As we saw in the proof of Theorem~\ref{thm:local-diff-terms}, this is a 
-\ldto for $A^2 \times \{0,1\}$, hence a difference term operation for $\alg{A}$.
+The first stage of our procedure computes the Cayley table of a \ldto for 
+$Z_0 \cup U_\ell$. In the second stage, we do the same for
+$Z_1 \cup U_\ell$, and so on, until we arrive at 
+a Cayley table for $Z_\ell \cup U_\ell = A^2 \times \{0,1\}$.
+So there are $\ell+1$ stages, each stage consisting of $\ell$ steps (described below), 
+and each steps requiring a single call to Algorithm~\ref{alg:ld-2}.
+Therefore, we need to make $\ell^2 \approx n^4$ calls to Algorithm~\ref{alg:ld-2}, so 
+the total running-time is on the order of $r^2m^2n^7 + n^9$.
 
-We now describe the two inductive stages in more detail and show that each can be completed in 
-$n^2$ calls to Algorithm~\ref{alg:ld-2}.
-Define 
-\begin{align*} 
-S_1 &:= \{(a_0, b_0, 1),(a_{\ell}, b_{\ell},0)\},\\
-S_2 &:= \{(a_0, b_0, 1), (a_1, b_1, 1), (a_{\ell}, b_{\ell},0)\},\\
-& \vdots\\
-S_\ell &:= \{(a_0, b_0, 1), (a_1, b_1, 1), \dots,
-(a_{\ell-1}, b_{\ell-1},1), (a_{\ell}, b_{\ell},0)\}.
-\end{align*}
-Each of the enumerated steps below requires a single call to Alg.~\ref{alg:ld-2}.
+Here are the steps involved in the first stage, where we compute a \ldto for 
+$Z_0 \cup U_\ell$. 
 \begin{enumerate}[1.]
-  \item Compute $p_1 \in \dtr S_1$ (i.e.~$p_1$ is a \ldto for $S_1$); % for $\{(a_0, b_0, 1), (a_{\ell}, b_{\ell},0)\}$.    
-  \item compute $q_1\in \dtr \{(p_1(a_1, a_1, b_1), b_1, 1), (a_{\ell}, b_{\ell},0)\}$; \\
-  form $p_2(x,y,z) = q_1(p_1(x,y,z), p_1(y,y,z), z) \in \dtr S_2$; %\{(a_0, b_0, 1), (a_1, b_1, 1),(a_{\ell}, b_{\ell},0)\}$.
-  \item compute $q_2\in \dtr \{(p_2(a_2, a_2, b_2), b_2, 1), (a_{\ell}, b_{\ell},0)\}$; \\
-  form $p_3(x,y,z) = q_2(p_2(x,y,z), p_2(y,y,z), z) \in \dtr S_3$;\\
-    % \item compute $q_3\in \dtr \{(p_3(a_3, a_3, b_3), b_3, 1), (a_{\ell}, b_{\ell},0)\}$; \\
-  % form $p_4(x,y,z) = q_3(p_3(x,y,z), p_3(y,y,z), z) \in \dtr S_4$;\\
+  \item Compute $p_1 \in \dtr S_1 ( = \dtr \{(a_0, b_0, 0), (a_0, b_0, 1)\})$.    
+  \item compute $q_1\in \dtr \{(a_0, b_0, 0), (p_1(a_1, a_1, b_1), b_1, 1)\}$; \\
+  form $p_2(x,y,z) = q_1(p_1(x,y,z), p_1(y,y,z), z)$; % \in \dtr S_2$; %\{(a_0, b_0, 1), (a_1, b_1, 1),(a_{\ell}, b_{\ell},0)\}$.
+  \item compute $q_2\in \dtr \{(a_0, b_0, 0), (p_2(a_2, a_2, b_2), b_2, 1)\}$; \\
+    form $p_3(x,y,z) = q_2(p_2(x,y,z), p_2(y,y,z), z)$;\\ % \in \dtr S_3$;\\
   $\vdots$
-  \item[$\ell$.] compute $q_{\ell-1}\in \dtr \{ (p_{\ell-1}(a_{\ell-1}, a_{\ell-1}, b_{\ell-1}), b_{\ell-1}, 1), (a_{\ell}, b_{\ell},0)\}$; \\
+  \item[$\ell$.] compute $q_{\ell-1}\in \dtr \{(a_0, b_0, 0),  (p_{\ell-1}(a_{\ell-1}, a_{\ell-1}, b_{\ell-1}), b_{\ell-1}, 1)\}$; \\
   form
-  $p(x,y,z) = q_{\ell-1}(p_{\ell-1}(x,y,z), p_{\ell-1}(y,y,z), z) \in \dtr S_\ell$;
+  $p_\ell(x,y,z) = q_{\ell-1}(p_{\ell-1}(x,y,z), p_{\ell-1}(y,y,z), z)$;
 \end{enumerate}
+Call the final result $s_0 := p_\ell$.
+We prove below that $s_0 \in \dtr (Z_0 \cup U_\ell)$.
 
+The second stage is very similar to the first; however, when running through the $\ell$ steps,
+as in the list above, our goal will be to arrive at $s'_1 \in 
+\dtr \bigl((a_1, s_0(a_1, b_1, b_1), 0) \cup U_\ell\bigr)$. After generating such an operation 
+we define $s_1(x,y,z) := s'_1(x, s_0(x,y,y), s_0(x,y,z))$, which will
+belong to $\dtr \bigl(Z_1 \cup U_\ell\bigr)$ (as we prove below).
+We continue in this way for $(\ell+1)$ stages of $\ell$ steps each, until we arrive at 
+our goal: $d \in \dtr \bigl(Z_\ell \cup U_\ell\bigr)$.
+
+Without further ado, here is a precise description of the algorithm.
 \RestyleAlgo{boxruled}
 %\LinesNumbered
 \begin{algorithm}
   % \KwIn{$\tabT \eta_{\kk}$ and $\tabT \sA_{2k}$}
-  \KwOut{$p \in \dtr S_{\ell}$}
+  \KwOut{$p_\ell \in \dtr (Z_0 \cup U_\ell)$}
   
-  compute $p_1 \in \dtr S_1$. % for $\{(a_0, b_0, 1), (a_{\ell}, b_{\ell},0)\}$.    
+  compute $p_1 \in \dtr \{(a_0, b_0, 0), (a_0, b_0, 1)\}$;
   
   \For {$1\leq i < \ell$} {
-    compute $q_i\in \dtr \{(p_i(a_i, a_i, b_i), b_i, 1), (a_{\ell}, b_{\ell},0)\}$;
+    compute $q_i\in \dtr \{(a_0, b_0, 0), (p_i(a_i, a_i, b_i), b_i, 1)\}$;
   
     form $p_{i+1}(x,y,z) = q_i(p_i(x,y,z), p_i(y,y,z), z)$;
   }
 
   \Return $p_\ell$
-  \caption{Compute a \ldto for $S_\ell$\label{alg:new-2-1}}
-\end{algorithm}
+  \caption{(Stage 1) compute \ldto for $Z_0 \cup U_\ell$\label{alg:new-2-1}}
+\end{algorithm}  
 
-
-The second inductive stage is similar. Define
-\begin{align*} 
-  T_1 &:= \{(a_0, b_0, 0), (p(a_{\ell}, a_{\ell}, b_{\ell}), b_{\ell}, 1)\},\\
-  T_2 &:= \{(a_0, b_0, 0), (a_1, b_1, 0), (p(a_{\ell}, a_{\ell}, b_{\ell}), b_\ell, 1)\},\\ 
-  & \vdots\\
-  T_\ell &:= \{(a_0, b_0, 0), \dots,
-(a_{\ell-1}, b_{\ell-1},0), (a_{\ell}, b_{\ell},0), (p(a_{\ell}, a_{\ell}, b_{\ell}), b_\ell, 1)\}.
-\end{align*}
-
-Each of the enumerated steps below requires a single call to Alg.~\ref{alg:ld-2}.
-\begin{enumerate}[1.]
-  \item Compute $p_1 \in \dtr T_1$ (i.e.~$p_1$ is a \ldto for $T_1$);
-  \item compute $q_1\in \dtr \{(a_1, p_1(a_1, b_1, b_1), 0), (p(a_{\ell}, a_{\ell}, b_{\ell}), b_{\ell}, 1)\}$; \\
-  form $p_2(x,y,z) = q_1(x, p_1(x,y,y), p_1(x,y,z)) \in \dtr (T_2\cap S_2)$;
-  \item compute $q_2\in \dtr \{(a_2, p_2(a_2, b_2, b_2), 0), (p(a_{\ell}, a_{\ell}, b_{\ell}), b_{\ell}, 1)\}$; \\
-  form $p_3(x,y,z) = q_2(x, p_2(x,y,y), p_2(x,y,z)) \in \dtr (T_3\cap S_3)$;\\
-  $\vdots$
-  \item[$\ell$.] compute $q_{\ell-1}\in \dtr \{(a_{\ell-1}, p_{\ell-1}(a_{\ell-1}, b_{\ell-1}, b_{\ell-1}),0), (p(a_{\ell},a_{\ell}, b_{\ell}),  b_{\ell},1)\}$; \\
-  form
-  $d(x,y,z) = q_{\ell-1}(x, p_{\ell-1}(x,y,y), p_{\ell-1}(x,y,z)) \in \dtr (T_\ell \cap S_\ell)$;
-\end{enumerate}
-
-\RestyleAlgo{boxruled}
-%\LinesNumbered
-\begin{algorithm}
-  % \KwIn{$\tabT \eta_{\kk}$ and $\tabT \sA_{2k}$}
-  \KwOut{$p \in \dtr (T_{\ell}\cap S_\ell)$}
+\begin{algorithm}  
+  \KwIn{$s_{k-1} \in \dtr (Z_{k-1} \cup U_\ell)$}
+  \KwOut{$p_\ell \in \dtr \bigl\{(a_k, s_{k-1}(a_k, b_k, b_k), 0) \cup U_\ell\bigr\}$}
   
-  compute $p_1 \in \dtr T_1$. % for $\{(a_0, b_0, 1), (a_{\ell}, b_{\ell},0)\}$.    
+  compute $p_1 \in \dtr \{(a_k, s_{k-1}(a_k,b_k,b_k), 0), (a_0, b_0, 1)\}$;
   
   \For {$1\leq i < \ell$} {
-    compute $q_i\in \dtr \{(a_i, p_i(a_i, b_i, b_i), 0), (p(a_{\ell}, a_{\ell}, b_{\ell}), b_{\ell}, 1)\}$;
+    compute $q_i\in \dtr \{(a_k, s_{k-1}(a_k,b_k,b_k), 0), (p_i(a_i, a_i, b_i), b_i, 1)\}$;
   
-    form $p_{i+1}(x,y,z) = q_i(x, p_i(x,y,y), p_i(x,y,z))$;
+    form $p_{i+1}(x,y,z) = q_i(p_i(x,y,z), p_i(y,y,z), z)$;
   }
-
+  
   \Return $p_\ell$
-  \caption{Compute a \ldto for $S_\ell$\label{alg:new-2-2}}
+  \caption{(Stage $k$) \ldt op for $\{(a_k, s_{k-1}(a_k, b_k, b_k), 0)\} \cup U_\ell$\label{alg:new-2-2}}
 \end{algorithm}
 
-~
+
+\begin{algorithm}  
+\KwOut{$s_\ell \in \dtr (Z_\ell \cup U_\ell)$}
+  
+  compute $s_0 := p_\ell$ from Alg.~\ref{alg:new-2-1}
+  
+  \For {$0< k \leq \ell$} {
+    
+    compute $s'_k \in \dtr \bigl((a_k, s_{k-1}(a_k, b_k, b_k), 0) \cup U_\ell\bigr)$\\
+    (call Alg.~\ref{alg:new-2-2} with input $s_{k-1}$)\\[4pt]
+
+    form $s_k(x,y,z) := s'_k(x, s_{k-1}(x,y,y), s_{k-1}(x,y,z))$
+  }
+  \Return $s_\ell$
+  \caption{(Outer loop) compute \ldt  op for $A^2 \times \{0,1\}$\label{alg:new-2-3}}
+\end{algorithm}
+
+
+
+
+
+\begin{lemma}
+  The operation $s_0$ returned by Algorithm~\ref{alg:new-2-1} is a \ldto for $S_\ell$.
+  $Z_0 \cup U_\ell$
+\end{lemma}
+
+\begin{proof}
+\end{proof}
+
+
+\begin{lemma}
+The operation $s_k$ returned by Algorithm~\ref{alg:new-2-2}
+is a \ldto for $\bigl((a_k, s_{k-1}(a_k, b_k, b_k), 0) \cup U_\ell\bigr)$.
+\end{lemma}
+\begin{proof}
+\end{proof}
+
+\begin{prop}
+  The operation $p_{\ell}$ returned by Algorithm~\ref{alg:new-2-2} is a \ldto for $A^2 \times \{0,1\}$, hence a difference term operation for $\alg{A}$.
+\end{prop}
+    
+\begin{proof}
+  \wjd{TODO: fill in these proofs!}
+\end{proof}
+
+
 \wjd{TODO: summarize and discuss complexity.}
   
 
@@ -2519,10 +2541,223 @@ Each of the enumerated steps below requires a single call to Alg.~\ref{alg:ld-2}
   
   
   
+
+  
+
+
+
+
+
+
+
+
+
+
+
+
+  Define $\sA_0 =\{(a_\ell, b_\ell, 1)\}$ and let
+  \begin{align*}
+    \sA_1 &:=\sA_0  \cup \{(a_0, b_0, 0) \},\\
+    \sA_2 &:=\sA_0  \cup \{(a_0, b_0, 0), (a_0, b_0, 1)\},\\
+    \sA_3 &:= \sA_0  \cup \{(a_0, b_0, 0), (a_0, b_0, 1), (a_1,b_1,0)\}, \dots.
+  %  \sA_2 &:= \dtr\{(a_0, b_0, 0), (a_0, b_0, 1), (a_1,b_1,0), (a_1,b_1,1)\},\dots,
+  \end{align*}
+    In general, for $0< k < n^2-1$, let
+  \begin{align*}
+    \sA_{2k} &:= \sA_{2k-1} \cup \{(a_{k-1},b_{k-1},1)\},\\[4pt]
+    \sA_{2k+1} &:= \sA_{2k} \cup \{(a_{k},b_{k},0)\}.
+  \end{align*}
+  Also, define $\sB_k := \{(a_k, p_k(a_k, b_k, b_k), 0), (s(a_{\ell}, a_{\ell}, b_{\ell}), b_{\ell}, 1)\}$.
+  %for $0< k < n^2-1$.
+  
+  \medskip
+  
+  \noindent \underline{Claim 1:} 
+  If 
+  $s \in \dtr S_\ell$,  
+  $p_1 \in \dtr T_1$, 
+  $q_1\in \dtr \sB_1$, then $p_2 \in \dtr \sA_2$.\\[5pt]
+  \emph{Proof.}
+  %\sA_2 &:=\{(a_\ell, b_\ell, 1), (a_0, b_0, 0), (a_0, b_0, 1)\},\\
+  % $\sA_0 =$
+  % $p_1 \in \dtr \{(a_0, b_0, 0), (s(a_{\ell}, a_{\ell}, b_{\ell}), b_{\ell}, 1)\}$);
+  % $q_1\in \dtr \{(a_1, p_1(a_1, b_1, b_1), 0), (s(a_{\ell}, a_{\ell}, b_{\ell}), b_{\ell}, 1)\}$; \\
+  % form $p_2(x,y,z) = q_1(x, p_1(x,y,y), s(x,y,z))$;
+  \begin{alignat*}{3}
+  p_2(a_0, b_0, b_0) &= q_1(a_0, p_1(a_0,b_0,b_0), p_1(a_0,b_0,b_0)) &  &\\
+  &\mathrel{\delta_0} q_1(a_0, a_0, a_0) & \quad&\because p_1\in \dtr (a_0, b_0, 0)  \\
+  &= a_0 & \quad&\because \text{idempotence }  
+  \end{alignat*}
+  \begin{alignat*}{3}
+  p_2(a_1, a_1, b_1) &= q_1(a_1, p_1(a_1,a_1,a_1), p_1(a_1,a_1,b_1)) &  &\\
+  &\mathrel{\delta_0} q_1(a_1, a_1, p_1(a_1, a_1, b_1)) & \quad&\because \text{idempotence }  \\
+  \end{alignat*}
+  \begin{alignat*}{3}
+  p_2(a_\ell, a_\ell, b_\ell) &= q_1(a_\ell, a_\ell, p_1(a_\ell,a_\ell,b_\ell) &  &\\
+  &\mathrel{\delta_0} q_1(a_1, a_1, p_1(a_1, a_1, b_1)) & \quad&\because \text{idempotence }  \\
+  &\mathrel{\delta_0} q_1(a_1, a_1, p_1(a_1, a_1, b_1)) & \quad&\because \text{idempotence }  \\
+  \end{alignat*}
+  
+  
+  
+  prove, if
+  then
+  $p_{2k} \in \dtr \{(a_0, b_0, 0), (a_0, b_0, 1), \dots, (a_k, b_k, 0), (a_k, b_k, 0)\}$.
+  
+  By definition,
+  $p_2(x,y,z) = q_1(x, p_1(x,y,y), s(x,y,z))$, so 
+  \[
+  p_2(a_0, b_0, b_0) = q_1(a_0, p_1(a_0,b_0,b_0), s(a_0,b_0,b_0))\mathrel{[\theta_0, \theta_0]}a_0
+  \]
+  \[
+  p_2(a_0, a_0, b_0) = q_1(a_0, p_1(a_0,b_0,b_0), s(a_0,b_0,b_0))\mathrel{[\theta_0, \theta_0]}a_0
+  \]
+  $p_{2k} \in \dtr \{(a_0, b_0, 0), (a_0, b_0, 1), \dots, (a_k, b_k, 0), (a_k, b_k, 0)\}$.
+  
+  First we prove the following: if $s \in \dtr S_\ell$,  $p_1 \in \dtr T_1$, $q_1\in \dtr \sB_1$,
+  then $p_2 \in \dtr \sA_2$.
+  After that we prove, for every $k>2$, if 
+  $p_{k} \in \dtr \sA_{k}$ and $q_{k} \in \dtr \sB_k$, then 
+  $p_{k+1} \in \dtr \sA_{k+1}$.  It will follow by induction that 
+  $p_{\ell}$ is a \ldto for 
+  \[
+    \sA_{\ell-2} :=  \{(a_0, b_0, 0), (a_0, b_0, 1), (a_1,b_1,0), \dots, 
+    (a_{\ell}, b_{\ell}, 0), (a_\ell, b_\ell, 1)\}.
+  \]
+  
+  
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  Call the resulting \ldto $p$.  The second stage computes the Cayley table of a \ldto for
+  \[T_\ell := \{(a_0, b_0, 0), \dots,
+  (a_{\ell-1}, b_{\ell-1},0), (a_{\ell}, b_{\ell},0), (p(a_{\ell}, a_{\ell}, b_{\ell}), b_\ell, 1)\}.
+  \]
+  Call this \ldto $q$. Finally, we construct the Cayley table of the operation
+  $d(x,y,z) := q(x, p(x,y,y), p(x,y,z))$.
+  This $d$ will be a \ldto for $A^2 \times \{0,1\}$, hence a difference term operation for $\alg{A}$.
+  
+  We now describe the two inductive stages in more detail and then prove the claim made at the end of the 
+  last paragraph. It will be apparent that 
+  each the two inductive stages of this section involves 
+  $n^2$ calls to Algorithm~\ref{alg:ld-2}, so the total complexity will be on the order of 
+  $2n^2$ times the complexity of Algorithm~\ref{alg:ld-2}.
+  
+  Define $S_0 := \{(a_{\ell}, b_{\ell},0)\}$ and let
+  $S_{k+1} = S_{k} \cup \{(a_k, b_k, 1)\}$; in particular,
+  $S_\ell := \{(a_0, b_0, 1), (a_1, b_1, 1), \dots,(a_{\ell-1}, b_{\ell-1},1), (a_{\ell}, b_{\ell},0)\}$.
+  % \begin{align*} 
+  %   S_1 &:= S_0 \cup \{(a_0, b_0, 1) \},\\
+  % S_2 &:= S_0 \cup \{(a_0, b_0, 1), (a_1, b_1, 1)\},\\
+  % & \vdots\\
+  % S_k &:= S_0 \cup  \bigcup_{0\leq j < k}\{(a_j, b_j, 1)\}\\
+  % & \vdots\\
+  Each of the enumerated steps below requires a single call to Alg.~\ref{alg:ld-2}.
+  \begin{enumerate}[1.]
+    \item Compute $p_1 \in \dtr S_1 ( = \dtr \{(a_0, b_0, 1), (a_{\ell}, b_{\ell},0)\})$.    
+    \item compute $q_1\in \dtr \{(p_1(a_1, a_1, b_1), b_1, 1), (a_{\ell}, b_{\ell},0)\}$; \\
+    form $p_2(x,y,z) = q_1(p_1(x,y,z), p_1(y,y,z), z)$; % \in \dtr S_2$; %\{(a_0, b_0, 1), (a_1, b_1, 1),(a_{\ell}, b_{\ell},0)\}$.
+    \item compute $q_2\in \dtr \{(p_2(a_2, a_2, b_2), b_2, 1), (a_{\ell}, b_{\ell},0)\}$; \\
+      form $p_3(x,y,z) = q_2(p_2(x,y,z), p_2(y,y,z), z)$;\\ % \in \dtr S_3$;\\
+      % \item compute $q_3\in \dtr \{(p_3(a_3, a_3, b_3), b_3, 1), (a_{\ell}, b_{\ell},0)\}$; \\
+    % form $p_4(x,y,z) = q_3(p_3(x,y,z), p_3(y,y,z), z) \in \dtr S_4$;\\
+    $\vdots$
+    \item[$\ell$.] compute $q_{\ell-1}\in \dtr \{ (p_{\ell-1}(a_{\ell-1}, a_{\ell-1}, b_{\ell-1}), b_{\ell-1}, 1), (a_{\ell}, b_{\ell},0)\}$; \\
+    form
+    $p_\ell(x,y,z) = q_{\ell-1}(p_{\ell-1}(x,y,z), p_{\ell-1}(y,y,z), z)$;
+  \end{enumerate}
+  We will see below that the result of these $\ell$ steps is a \ldto for $S_\ell$.
+  \RestyleAlgo{boxruled}
+  %\LinesNumbered
+  \begin{algorithm}
+    % \KwIn{$\tabT \eta_{\kk}$ and $\tabT \sA_{2k}$}
+    \KwOut{$p_\ell \in \dtr S_{\ell}$}
+    
+    compute $p_1 \in \dtr S_1$. % for $\{(a_0, b_0, 1), (a_{\ell}, b_{\ell},0)\}$.    
+    
+    \For {$1\leq i < \ell$} {
+      compute $q_i\in \dtr \{(p_i(a_i, a_i, b_i), b_i, 1), (a_{\ell}, b_{\ell},0)\}$;
+    
+      form $p_{i+1}(x,y,z) = q_i(p_i(x,y,z), p_i(y,y,z), z)$;
+    }
+  
+    \Return $p_\ell$
+    \caption{Compute a \ldto for $S_\ell$\label{alg:new-2-1}}
+  \end{algorithm}
   
   
   
   
+
+
+
+  The second inductive stage is similar, but differs in a couple of key aspects. 
+Let $s := p_\ell \in \dtr S_\ell$ denote the operation returned by Algorithm~\ref{alg:new-2-1}.
+Define, $T_0 := \{(s(a_{0}, a_{0}, b_{0}), b_{0}, 1)\}$ and let 
+\begin{align*} 
+  T_1 &:= \{(a_0, b_0, 0), \{(s(a_{0}, a_{0}, b_{0}), b_{0}, 1)\},
+  T_2 &:=  T_0 \cup\{(a_0, b_0, 0), (a_1, b_1, 0)\},\\ 
+  & \vdots\\
+  T_\ell &:= T_0 \cup \{(a_0, b_0, 0), \dots,
+(a_{\ell-1}, b_{\ell-1},0), (a_{\ell}, b_{\ell},0)\}.
+\end{align*}
+In general $T_{k+1} = T_{k} \cup \{(a_k, b_k, 0)\}$.
+Each of the enumerated steps below requires a single call to Alg.~\ref{alg:ld-2}.
+\begin{enumerate}[1.]
+  \item Compute $p_1 \in \dtr T_1$ ($ = \dtr \{(a_0, b_0, 0), (s(a_{\ell}, a_{\ell}, b_{\ell}), b_{\ell}, 1)\}$);
+  \item compute $q_1\in \dtr \{(a_1, p_1(a_1, b_1, b_1), 0), (s(a_{\ell}, a_{\ell}, b_{\ell}), b_{\ell}, 1)\}$; \\
+  form $p_2(x,y,z) = q_1(x, p_1(x,y,y), p_1(x,y,z))$;
+  \item compute $q_2\in \dtr \{(a_2, p_2(a_2, b_2, b_2), 0), (s(a_{\ell}, a_{\ell}, b_{\ell}), b_{\ell}, 1)\}$; \\
+  form $p_3(x,y,z) = q_2(x, p_2(x,y,y), p_2(x,y,z))$;\\
+  $\vdots$
+  \item[$\ell$.] compute $q_{\ell-1}\in \dtr \{(a_{\ell-1}, p_{\ell-1}(a_{\ell-1}, b_{\ell-1}, b_{\ell-1}),0), (s(a_{\ell},a_{\ell}, b_{\ell}),  b_{\ell},1)\}$; \\
+  form
+  $p_{\ell}(x,y,z) = q_{\ell-1}(x, p_{\ell-1}(x,y,y), p_{\ell-1}(x,y,z))$;
+\end{enumerate}
+
+
+
+\RestyleAlgo{boxruled}
+%\LinesNumbered
+\begin{algorithm}
+  \KwIn{$s \in \dtr S_\ell$}
+  \KwOut{$p_\ell \in \dtr\bigl( A^2 \times \{0,1\}\bigr)$}
+  
+  compute $p_1 \in \dtr \{(a_0, b_0, 0), (s(a_{\ell}, a_{\ell}, b_{\ell}), b_{\ell}, 1)\}$. % for $\{(a_0, b_0, 1), (a_{\ell}, b_{\ell},0)\}$.    
+  
+  \For {$1\leq i < \ell$} {
+    compute $q_i\in \dtr \{(a_i, p_i(a_i, b_i, b_i), 0), (s(a_{\ell}, a_{\ell}, b_{\ell}), b_{\ell}, 1)\}$;
+  
+    form $p_{i+1}(x,y,z) = q_i(x, p_i(x,y,y), p_i(x,y,z))$;
+  }
+
+  \Return $p_\ell$
+  \caption{Compute a \ldto for $A^2 \times \{0,1\}$\label{alg:new-2-2}}
+\end{algorithm}
+
 
 
 
