--- a/DiffTerm/diffTerm.tex
+++ b/DiffTerm/diffTerm.tex
@@ -2318,113 +2318,151 @@ $O(r^2m^2n^3 + n^5)$.
 The method is based on the proof of Theorem~\ref{thm:local-diff-terms} and consists of two 
 stages, each of which makes $n^2$ calls to Algorithm~\ref{alg:ld-2}.
 
-Define $\ell := 2n^2-1$ and 
-enumerate the set $A^2 \times \{0,1\}$ as follows:
-\[
-  \{(a_0, b_0, 0), (a_0, b_0, 1), (a_1, b_1, 0),(a_1, b_1, 1), \dots,
-  (a_{\ell-1}, b_{\ell-1},0), (a_{\ell}, b_{\ell},1)\}.
-\]
-Define $Z_0 := \{(a_0, b_0,0)\}$, $U_0 := \{(a_0, b_0,1)\}$, and for $k>0$,
-\[
-  Z_k := Z_{k-1} \cup \{(a_k, b_k,0)\}, \quad 
-  U_k := U_{k-1} \cup \{(a_k, b_k,1)\}.
-\]
-The first stage of our procedure computes the Cayley table of a \ldto for 
-$Z_0 \cup U_\ell$. In the second stage, we do the same for
-$Z_1 \cup U_\ell$, and so on, until we arrive at 
-a Cayley table for $Z_\ell \cup U_\ell = A^2 \times \{0,1\}$.
-So there are $\ell+1$ stages, each stage consisting of $\ell$ steps (described below), 
-and each steps requiring a single call to Algorithm~\ref{alg:ld-2}.
-Therefore, we need to make $\ell^2 \approx n^4$ calls to Algorithm~\ref{alg:ld-2}, so 
-the total running-time is on the order of $r^2m^2n^7 + n^9$.
+Let $\ell := n^2 -1$ and let $\{(a_0, b_0), (a_1, b_1), (a_2, b_2), \dots, (a_{\ell}, b_{\ell})\}$
+be an enumeration of the set $A^2$.
+For all $0\leq k < n^2$, define 
+\begin{align*}
+  Z_k &:= \{(a_0, b_0,0),(a_1, b_1,0), \dots, (a_k, b_k,0)\},\\
+  U_k &:= \{(a_0, b_0,1),(a_1, b_1,1), \dots, (a_k, b_k,1)\}.
+\end{align*}
+So $Z_{\ell} \cup U_{\ell} = A^2 \times \{0,1\}$.
+The first stage of our inductive procedure computes the Cayley table of a \ldto for 
+$Z_0 \cup U_{\ell}$. The second stage does the same for
+$Z_1 \cup U_{\ell}$. This continues until we arrive at 
+a Cayley table for $Z_{\ell} \cup U_{\ell} = A^2 \times \{0,1\}$.
+Thus, there are $n^2$ stages, each stage consisting of $n^2$ steps (described below), 
+and each step requiring a single call to Algorithm~\ref{alg:ld-2}.
+Therefore, we will make $n^4$ calls to Algorithm~\ref{alg:ld-2}, and
+the total running-time will be on the order of $r^2m^2n^7 + n^9$.
 
-Here are the steps involved in the first stage, where we compute a \ldto for 
-$Z_0 \cup U_\ell$. 
-\begin{enumerate}[1.]
+Here are the steps that Stage 1 makes in order to compute a \ldto for 
+$\{(a_0, b_0,0),(a_0, b_0,1),(a_1, b_1,1), \dots, (a_{\ell}, b_{\ell},1)\}$.
+\begin{enumerate}
   \item Compute $p_1 \in \dtr S_1 ( = \dtr \{(a_0, b_0, 0), (a_0, b_0, 1)\})$.    
   \item compute $q_1\in \dtr \{(a_0, b_0, 0), (p_1(a_1, a_1, b_1), b_1, 1)\}$; \\
   form $p_2(x,y,z) = q_1(p_1(x,y,z), p_1(y,y,z), z)$; % \in \dtr S_2$; %\{(a_0, b_0, 1), (a_1, b_1, 1),(a_{\ell}, b_{\ell},0)\}$.
   \item compute $q_2\in \dtr \{(a_0, b_0, 0), (p_2(a_2, a_2, b_2), b_2, 1)\}$; \\
     form $p_3(x,y,z) = q_2(p_2(x,y,z), p_2(y,y,z), z)$;\\ % \in \dtr S_3$;\\
   $\vdots$
-  \item[$\ell$.] compute $q_{\ell-1}\in \dtr \{(a_0, b_0, 0),  (p_{\ell-1}(a_{\ell-1}, a_{\ell-1}, b_{\ell-1}), b_{\ell-1}, 1)\}$; \\
+  \item[($n^2$)] compute $q_{\ell}\in \dtr \{(a_0, b_0, 0),  (p_{\ell}(a_{\ell}, a_{\ell}, b_{\ell}), b_{\ell}, 1)\}$; \\
   form
-  $p_\ell(x,y,z) = q_{\ell-1}(p_{\ell-1}(x,y,z), p_{\ell-1}(y,y,z), z)$;
+  $p_{n^2}(x,y,z) = q_{\ell}(p_{\ell}(x,y,z), p_{\ell}(y,y,z), z)$;
 \end{enumerate}
-Call the final result $s_0 := p_\ell$.
+Let $s_0 := p_{n^2}$ denote the final result of Stage 1.
 We prove below that $s_0 \in \dtr (Z_0 \cup U_\ell)$.
 
-The second stage is very similar to the first; however, when running through the $\ell$ steps,
-as in the list above, our goal will be to arrive at $s'_1 \in 
-\dtr \bigl((a_1, s_0(a_1, b_1, b_1), 0) \cup U_\ell\bigr)$. After generating such an operation 
-we define $s_1(x,y,z) := s'_1(x, s_0(x,y,y), s_0(x,y,z))$, which will
-belong to $\dtr \bigl(Z_1 \cup U_\ell\bigr)$ (as we prove below).
-We continue in this way for $(\ell+1)$ stages of $\ell$ steps each, until we arrive at 
-our goal: $d \in \dtr \bigl(Z_\ell \cup U_\ell\bigr)$.
+Stage 2 is very similar to Stage 1; however, our goal is to arrive at $s'_1 \in 
+\dtr \bigl((a_1, s_0(a_1, b_1, b_1), 0) \cup U_{\ell}\bigr)$. If we can generate 
+such an operation, then we will define $s_1(x,y,z) := s'_1(x, s_0(x,y,y), s_0(x,y,z))$, which will
+belong to $\dtr \bigl(Z_1 \cup U_{\ell}\bigr)$ (as we prove below).
+We continue in this way for $n^2$ stages of $n^2$ steps each, until we arrive at 
+our goal: $d \in \dtr \bigl(Z_{\ell} \cup U_{\ell}\bigr)$.
 
-Without further ado, here is a precise description of the algorithm.
+Without further ado, here is a precise description of the Stage 1 algorithm.
 \RestyleAlgo{boxruled}
 %\LinesNumbered
 \begin{algorithm}
   % \KwIn{$\tabT \eta_{\kk}$ and $\tabT \sA_{2k}$}
-  \KwOut{$p_\ell \in \dtr (Z_0 \cup U_\ell)$}
+  \KwOut{$p_{n^2} \in \dtr (Z_0 \cup U_{\ell})$}
   
   compute $p_1 \in \dtr \{(a_0, b_0, 0), (a_0, b_0, 1)\}$;
   
-  \For {$1\leq i < \ell$} {
+  \For {$1\leq i < {n^2}$} {
     compute $q_i\in \dtr \{(a_0, b_0, 0), (p_i(a_i, a_i, b_i), b_i, 1)\}$;
   
     form $p_{i+1}(x,y,z) = q_i(p_i(x,y,z), p_i(y,y,z), z)$;
   }
 
-  \Return $p_\ell$
-  \caption{(Stage 1) compute \ldto for $Z_0 \cup U_\ell$\label{alg:new-2-1}}
+  \Return $s_0:=p_{n^2}$
+  \caption{(Stage 1) compute \ldto for $Z_0 \cup U_{\ell}$\label{alg:new-2-1}}
 \end{algorithm}  
 
+
+\begin{lemma}
+  The operation $s_0$ returned by Algorithm~\ref{alg:new-2-1} is a \ldto for
+  $Z_0 \cup U_{\ell}:=  \{(a_0, b_0,0),(a_0, b_0,1)(a_1, b_1,1), \dots, (a_{\ell}, b_{\ell}, 1)\}$.
+
+\end{lemma}
+
+\begin{proof}
+First we show $s_0(a_0,b_0,b_0) \comr{\theta_0} a_0$. Recall, $\ell:=n^2-1$, and 
+$s_0(x,y,z):= q_\ell(p_\ell(x,y,z), p_\ell(y,y,z), z)$, so
+\begin{align*}
+  s_0(a_0,b_0,b_0)&= q_\ell(p_\ell(a_0,b_0,b_0), p_\ell(b_0,b_0,b_0), b_0);\\
+  &= q_\ell(p_\ell(a_0,b_0,b_0), b_0, b_0);
+\end{align*}
+\underline{Subclaim}: If $0 < k < n^2$, then $p_k \in \dtr (a_0, b_0, 0)$.\\
+\emph{Proof:} By construction, $p_1 \in \dtr \{(a_0, b_0, 0), (a_0, b_0, 1)\} \subseteq \dtr (a_0, b_0, 0)$.
+We show, if $p_{k-1} \in \dtr (a_0, b_0, 0)$, 
+then $p_{k} \in \dtr (a_0, b_0, 0)$.  
+Assume $p_{k-1} \in \dtr (a_0, b_0, 0)$; equivalently,
+$a_0 \comr{\thetao} p_{k-1}(a_0,b_0,b_0)$.  Then
+\[
+  p_k(a_0,b_0,b_0) = q_{k-1}(p_{k-1}(a_0,b_0,b_0), b_0, b_0) \comr{\thetao} 
+  q_{k-1}(a_0, b_0, b_0).
+\]
+The latter is congruent to  $a_0$ modulo $\com{\thetao}$, since 
+$q_k\in \dtr \{(a_0, b_0, 0)\}$ for all $0< k < n^2$. This proves the subclaim.
+
+Next, we show for $0 < k < n^2$ that $s_0(a_k, a_k, b_k) = b_k$.
+By definition
+\[
+  s_0(a_k, a_k, b_k) = q_\ell(p_\ell(a_k,a_k,b_k), p_\ell(a_k,a_k,b_k), b_k).
+\]
+\underline{Subclaim}: If $0 = i< k$ or $0 \leq i\leq k < n^2$, then $p_k(a_i, a_i, b_i) = b_i$.\\
+  \emph{Proof:} By construction, $p_1 (a_0, a_0, b_0) = b_0$.  Fix $0\leq i\leq k < n^2$.
+  Assume $p_k(a_i, a_i, b_i) = b_i$. Then, since $q_k \in \dtr (p_{k}(a_k, a_k, b_k),b_k, 1)$,
+  \begin{align*}
+    p_{k+1}(a_i, a_i, b_i) &= 
+    q_{k}(p_{k}(a_i, a_i, b_i), p_{k}(a_i, a_i, b_i), b_i) b_i)\\
+    &=\begin{cases}
+      q_{k}(b_i, b_i, b_i), & i<k,\\
+      b_k, & i=k.
+    \end{cases}\\
+    &= b_i.
+  \end{align*}
+      
+  
+\end{proof}
+
+
+
 \begin{algorithm}  
-  \KwIn{$s_{k-1} \in \dtr (Z_{k-1} \cup U_\ell)$}
-  \KwOut{$p_\ell \in \dtr \bigl\{(a_k, s_{k-1}(a_k, b_k, b_k), 0) \cup U_\ell\bigr\}$}
+  \KwIn{$s_{k-1} \in \dtr (Z_{k-1} \cup U_{\ell})$}
+  \KwOut{$p_{n^2} \in \dtr \bigl\{(a_k, s_{k-1}(a_k, b_k, b_k), 0) \cup U_{\ell}\bigr\}$}
   
   compute $p_1 \in \dtr \{(a_k, s_{k-1}(a_k,b_k,b_k), 0), (a_0, b_0, 1)\}$;
   
-  \For {$1\leq i < \ell$} {
+  \For {$1\leq i < n^2$} {
     compute $q_i\in \dtr \{(a_k, s_{k-1}(a_k,b_k,b_k), 0), (p_i(a_i, a_i, b_i), b_i, 1)\}$;
   
     form $p_{i+1}(x,y,z) = q_i(p_i(x,y,z), p_i(y,y,z), z)$;
   }
   
-  \Return $p_\ell$
-  \caption{(Stage $k$) \ldt op for $\{(a_k, s_{k-1}(a_k, b_k, b_k), 0)\} \cup U_\ell$\label{alg:new-2-2}}
+  \Return $p_{n^2}$
+  \caption{(Stage $k$) \ldt op for $\{(a_k, s_{k-1}(a_k, b_k, b_k), 0)\} \cup U_{\ell}$\label{alg:new-2-2}}
 \end{algorithm}
 
 
+
 \begin{algorithm}  
-\KwOut{$s_\ell \in \dtr (Z_\ell \cup U_\ell)$}
+\KwOut{$s_{n^2} \in \dtr (Z_{\ell} \cup U_{\ell})$}
   
-  compute $s_0 := p_\ell$ from Alg.~\ref{alg:new-2-1}
+  compute $s_0 := p_{\ell}$ from Alg.~\ref{alg:new-2-1}
   
-  \For {$0< k \leq \ell$} {
+  \For {$0< k <{n^2}$} {
     
-    compute $s'_k \in \dtr \bigl((a_k, s_{k-1}(a_k, b_k, b_k), 0) \cup U_\ell\bigr)$\\
+    compute $s'_k \in \dtr \bigl((a_k, s_{k-1}(a_k, b_k, b_k), 0) \cup U_{\ell}\bigr)$\\
     (call Alg.~\ref{alg:new-2-2} with input $s_{k-1}$)\\[4pt]
 
     form $s_k(x,y,z) := s'_k(x, s_{k-1}(x,y,y), s_{k-1}(x,y,z))$
   }
-  \Return $s_\ell$
+  \Return $s_{n^2}$
   \caption{(Outer loop) compute \ldt  op for $A^2 \times \{0,1\}$\label{alg:new-2-3}}
 \end{algorithm}
 
 
 
-
-
-\begin{lemma}
-  The operation $s_0$ returned by Algorithm~\ref{alg:new-2-1} is a \ldto for $S_\ell$.
-  $Z_0 \cup U_\ell$
-\end{lemma}
-
-\begin{proof}
-\end{proof}
 
 
 \begin{lemma}
@@ -2562,13 +2600,13 @@ is a \ldto for $\bigl((a_k, s_{k-1}(a_k, b_k, b_k), 0) \cup U_\ell\bigr)$.
     \sA_3 &:= \sA_0  \cup \{(a_0, b_0, 0), (a_0, b_0, 1), (a_1,b_1,0)\}, \dots.
   %  \sA_2 &:= \dtr\{(a_0, b_0, 0), (a_0, b_0, 1), (a_1,b_1,0), (a_1,b_1,1)\},\dots,
   \end{align*}
-    In general, for $0< k < n^2-1$, let
+    In general, for $0< k < \ell$, let
   \begin{align*}
     \sA_{2k} &:= \sA_{2k-1} \cup \{(a_{k-1},b_{k-1},1)\},\\[4pt]
     \sA_{2k+1} &:= \sA_{2k} \cup \{(a_{k},b_{k},0)\}.
   \end{align*}
   Also, define $\sB_k := \{(a_k, p_k(a_k, b_k, b_k), 0), (s(a_{\ell}, a_{\ell}, b_{\ell}), b_{\ell}, 1)\}$.
-  %for $0< k < n^2-1$.
+  %for $0< k < \ell$.
   
   \medskip
   
@@ -2782,7 +2820,7 @@ Each of the enumerated steps below requires a single call to Alg.~\ref{alg:ld-2}
   \sA_1 &:= \dtr\{(a_0, b_0, 0), (a_0, b_0, 1), (a_1,b_1,0)\},\\
   \sA_2 &:= \dtr\{(a_0, b_0, 0), (a_0, b_0, 1), (a_1,b_1,0), (a_1,b_1,1)\},\dots,
   \end{align*}
-  and for all $0< k < n^2-1$,
+  and for all $0< k < \ell$,
   \begin{align*}
   \sA_{2k} &:= \sA_{2k-1} \cap \dtr (a_k,b_k,1),\\[4pt]
   \sA_{2k+1} &:= \sA_{2k} \cap \dtr (a_{k+1},b_{k+1},0). 
@@ -3944,7 +3982,7 @@ The latter is input to Algorithm~\ref{alg:stream-ldt2}, the result of which is
 the set $\tabT \sA_2$ of tables for $\sA_2$.
 Thereafter, the process alternates between
 Algorithms~\ref{alg:stream-ldt1} and~\ref{alg:stream-ldt2}, and 
-terminates once we find the tables for $\sA_{2n^2-1} = A^2 \times \{0,1\}$,
+terminates once we find the tables for $\sA_{2\ell} = A^2 \times \{0,1\}$,
 which are tables of a difference term operations for $\alg A$ (as noted
 in Corollary~\ref{cor:loc-diff-term}).
 
